# GDE-MIT-mesh

./: .env  .env.example  .gitignore  404.html  DEMO_PITCH_PLAYBOOK.md  GUIDELINES.md  Implementation Plan  README.md  TODO.MD  TODO.md  build_output.txt  index.html  mkdocs.yml  package-lock.json  package.json  start.sh  tailwind.config.js  template_doc.json  test_e2e.py  transcribe.py
backend/: CONCEPT.md  README.md  api_models.py  concept.md  config.py  database.py  debug_cli.py  debug_console.html  documentation.md  eeszt_mock.db  generate_examples.py  index.html  llm_schemas.py  main.py  mesh_clinical.db  models.py  pipeline.py  pyproject.toml  pyrightconfig.json  requirements.txt  scrubber.py  seed.py  setup.sh  system_architecture_e2e.md.resolved  test_api.py  test_finalization.json  test_text.txt
backend/app/: main.py  seed.py
backend/app/core/: config.py  database.py  llm_client.py  prompts.py
backend/app/models/: api_models.py  llm_schemas.py  persistence_models.py
backend/app/report_generator/: generate_report.py
backend/app/report_generator/templates/: _header.html  consultation_report.html  discharge_summary.html  h_and_p.html  operative_note.html  (+1 more)
backend/app/services/: db_service.py  orchestrator.py  pipeline.py  scrubber.py
backend/app/transcriber/: server.py
backend/data/synthetic_transcripts/: 01_jane_doe_dermatology.json  02_michael_chen_orthopedic.json  03_emma_watson_migraine.json
backend/tests/: conftest.py  test_adversarial.py  test_api.py  test_data_linkage.py  test_integration.py  test_orchestrator.py  test_zero_hallucination.py
(+76 files in other folders)
